[gd_scene load_steps=4 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://pixel_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Gorilla.tscn" type="PackedScene" id=3]

[node name="StartMenu" type="Node"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 194.0
margin_top = 3.0
margin_right = 446.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "Q B A S I C  G O R I L L A S"

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 70.0
margin_right = 640.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 279.0
margin_top = 3.0
margin_right = 360.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "STARRING:"

[node name="CenterContainer3" type="CenterContainer" parent="."]
margin_top = 92.0
margin_right = 640.0
margin_bottom = 112.0

[node name="Label" type="Label" parent="CenterContainer3"]
margin_left = 234.0
margin_top = 3.0
margin_right = 405.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 2 )
text = "Player1 AND Player2"

[node name="Gorilla_2" parent="." instance=ExtResource( 3 )]
position = Vector2( 350, 170 )

[node name="Gorilla_1" parent="." instance=ExtResource( 3 )]
position = Vector2( 280, 171 )
